--- a/index-1.html
+++ b/index-1.html
@@ -11,6 +11,7 @@
 rel="stylesheet">
 
 <link href="css/style.css" rel="stylesheet">
+<link href="css/style.nav" rel="stylesheet">
 
 </head>
 <body>
